--- a/project1.ipynb
+++ b/project1.ipynb
@@ -513,7 +513,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "In this section , we did out "
+    "In this section , we train the real data,we both out put the cv loss and cv weight of linear model and the loss of the best model with the lowest cv loss.\n",
+    "the output is reasonable as the output indicates.\n",
+    "\n",
+    "We can do better than a linear base fuction if we use polynomial base fuction. as we can see the benchmark output . some cases the best model with the polynomial base function have much lower loss than linear base function."
    ]
   },
   {
